--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            font-weight: 100%;
+            background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #333;
+            background-color: #380036;
             color: #fff;
             text-align: center;
+            text-decoration: underline  ;
             padding: 10px;
         }
         main {
@@ -30,12 +33,12 @@
             cursor: pointer;
         }
         img:hover{
-            filter: drop-shadow(5px 5px 5px rgb(14, 100, 229));
+            filter: drop-shadow(5px 5px 5px rgb(4, 235, 235));
             transform: scale(1.2);
             
         }
         footer {
-            background-color: #333;
+            background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
             color: #f90707;
             text-align: center;
             padding: 15px;
@@ -43,11 +46,18 @@
             bottom: 0;
             width: 100%;
         }
+        p{
+            color: #fff;
+            font-size: large;
+        }
+        span{
+            color: #f90707;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1 style = "color: #f90707;" >Tribute to Abhinandan Varthaman</h1>
+        <h1 style = "color: #f5f0f0;" >Tribute to <span>Abhinandan Varthaman</span></h1>
     </header>
     <main>
         <img src="abhinandan.png" alt="Abhinandan Varthaman">
